prevent-overflow 업데이트

--- a/develop/css/layout/_reset.scss
+++ b/develop/css/layout/_reset.scss
@@ -37,5 +37,6 @@ html,
 body {
 	&.oxy-nav-menu-prevent-overflow {
 		overflow-y: visible;
+		height: auto;
 	}
 }
